platform/istio/manifests/authz/owner/authorization-product.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-owner-access-product
  namespace: come2us
spec:
  selector:
    matchLabels:
      app: product-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["GET"]
            paths:
              - /delivery-policies/*
              - /stores/products

        - operation:
            methods: ["POST"]
            paths:
              - /delivery-policies
              - /discounts
              - /products
              - /products/{*}/options
              - /products/options/{*}/values
              - /stores

        - operation:
            methods: ["PATCH"]
            paths:
              - /products/{*}/public
              - /products/{*}/categories
        
        - operation:
            methods: ["PATCH", "DELETE"]
            paths:
              - /delivery-policies/*
              - /discounts/{*}
              - /products/{**}  # {id}, options/{id}, options/values/{id}
              - /stores/{*}
      when:
        - key: request.auth.claims[authority]
          values: ["OWNER"]
